api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpn-api
  namespace: vpn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpn-api
  template:
    metadata:
      labels:
        app: vpn-api
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: vpn-api
          image: ghcr.io/itzmegoldi/vpn-api:3bae6215dea4d5e1ba5b389fa43b487108b37a41
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
