deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpn
  namespace: vpn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpn
  template:
    metadata:
      labels:
        app: vpn
    spec:
      containers:
        - name: vpn
          image: ghcr.io/itzmegoldi/vpn-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
