worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpn-worker
  namespace: vpn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vpn-worker
  template:
    metadata:
      labels:
        app: vpn-worker
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: vpn-worker
          image: ghcr.io/itzmegoldi/vpn-worker:3bae6215dea4d5e1ba5b389fa43b487108b37a41
          imagePullPolicy: Always
