service.yml
apiVersion: v1
kind: Service
metadata:
  name: vpn
spec:
  selector:
    app: vpn
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
