ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vpn-api
  namespace: vpn
spec:
  ingressClassName: nginx
  rules:
    # - host: http://192.168.31.13
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vpn-api
                port:
                  number: 80
